--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
 
 </body>
-<script src="racket-rotate.js"></script>
+<script src="web/racket-rotate.js"></script>
     <script>
         const name=document.querySelector("input[name=username]")
         const password=document.querySelector("input[name=password]")
