--- a/sign.html
+++ b/sign.html
@@ -93,7 +93,7 @@
             <div class="header">Login</div>
             <div class="form-wrapper">
                 <input type="text" name="username" placeholder="username" class="input-item">
-                <img src="racket.png" alt="racket"><img src="racket.png" class="flip-img" alt="racket">
+                <img src="asset/" alt="racket"><img src="asset/" class="flip-img" alt="racket">
                 <input type="password" name="password" placeholder="password" class="input-item">
                 <a href="#"><div class="btn">Login</div></a>
             </div>
