--- a/index.html
+++ b/index.html
@@ -57,9 +57,19 @@
             width: 300px;
             height: 100px;
             text-align: center;
+            font:16px "微软雅黑" black;
             line-height: 100px;
             border-radius: 10px;
             transition: all 0.5s;
+        }
+        .img .card textarea{
+            width: 100%;
+            height: 100%;
+            border-radius: inherit;
+            background-color: inherit;
+            border: none;
+            outline: none;
+            resize: none;
         }
         .img .card:first-child{
             background-color: rgba(0, 255, 255, 0.644);
@@ -81,6 +91,7 @@
             position: absolute;
             bottom: 0;
             left: 80%;
+            z-index: 999;
         }
         .img .radio{
             width: 10px;
@@ -99,9 +110,15 @@
 
 <body>
     <div class="img">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">
+            <textarea name="" id="">简介</textarea>
+        </div>
+        <div class="card">
+            <textarea name="" id="">版本</textarea>
+        </div>
+        <div class="card">
+            <textarea name="" id="">事件</textarea>
+        </div>
         <div class="radios">
             <div class="radio active"></div>
             <div class="radio"></div>
@@ -157,12 +174,11 @@
                 })
             clearInterval(id)
             })
-        })
-        radios.forEach((radio, i) => {
             radio.addEventListener('mouseleave',function(){
                 index = i
                 cards.forEach((card, i) => {
                     card.style.left = `${(i - index) * 100}%`
+
                 })
                 radios.forEach((radio, i) => {
                     radio.classList.remove('active')
@@ -170,9 +186,19 @@
                         radio.classList.add('active')
                     }
                 })
+                clearInterval(id);
             id=setInterval(move, 2000)
             })
         })
-        
+
+        cards.forEach((card, i) => {
+            card.addEventListener('click',function(){
+                clearInterval(id);
+            })
+            card.addEventListener('mouseleave',function(){
+                clearInterval(id);
+            id=setInterval(move, 2000)
+        })
+        })
 </script>
 </html>
