添加图标，修改名称

--- a/sign.html
+++ b/sign.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign</title>
+    <link rel="shortcut icon" href="asset/racket.ico" type="image/x-icon">
     <style>
         * {
             margin: 0;
@@ -93,7 +94,7 @@
             <div class="header">Login</div>
             <div class="form-wrapper">
                 <input type="text" name="username" placeholder="username" class="input-item">
-                <img src="asset/" alt="racket"><img src="asset/" class="flip-img" alt="racket">
+                <img src="asset/racket.png" alt="racket"><img src="asset/racket.png" class="flip-img" alt="racket">
                 <input type="password" name="password" placeholder="password" class="input-item">
                 <a href="#"><div class="btn">Login</div></a>
             </div>
