--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="button">
                 <a href="sign.html">Login</a>
             </div><div class="button">
-                <a href="snack.html">snack</a>
+                <a href="snake.html">snake</a>
             </div>
         </div>
             
