--- a/sign_up.html
+++ b/sign_up.html
@@ -161,7 +161,7 @@
             localStorage.setItem("user_data", JSON.stringify(data));
             
             // 弹出存储的数据以供检查
-            alert("用户数据已保存:\n" + JSON.stringify(data, null, 2));
+            alert("用户数据已保存:\n");
         }
 </script>
 </html>
