--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 </a>
             </div>
             <div class="login">
-                <a href="snack.html">
-                    <i>snack</i>
+                <a href="snake.html">
+                    <i>snake</i>
                 </a>
             </div>
         </div>
