--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         }
         nav{
             width: 100%;
-            height: 100px;
+            height: 80px;
             background-color: #000;
             position:fixed;
-            top: -100px;
+            top: -200px;
             transition: all 0.5s;
         }
         .nav-wrapper{
@@ -46,14 +46,14 @@
             margin-right: 20px;
             position: relative;
         }
-        #nav-mobile li a{
+        #nav-mobile li h3,a{
+            cursor: pointer;
             color: #fff;
         }
         .log{
             position: absolute;
             width: 100px;
             background-color: white;
-            border-radius: 10px 10px;
             opacity: 0;
             transition: all 0.3s;
         }
@@ -71,7 +71,7 @@
         }
         .log ul li:hover{
             
-            background-color: #f0f0f0;
+            background-color: #4d9e44;
         }
         ul li:nth-child(2):hover .log{
             opacity: 1;
@@ -98,9 +98,7 @@
             font-weight: 700;
             margin-top: 20px;
         }
-        .image img:hover{
-            transform: scale(1.1) rotate(360deg);
-        }
+        
         .button  a{
             width:200px;
             height: 50px;
@@ -121,8 +119,8 @@
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo">groge</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#">记事本</a></li>
-                    <li><a href="#">别点</a>
+                    <li><a href="#"><h3>记事本</h3></a></li>
+                    <li><h3>别点</h3>
                         <div class="log">
                             <ul>
                                 <li><a href="#">你</a></li>
@@ -131,7 +129,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="#">广告位</a></li>
+                    <li><a href="#"><h3>广告位</h3></a></li>
                 </ul>
             </div>
         </nav>
@@ -178,5 +176,11 @@
     setInterval(() => {
         time.innerHTML=new Date().toLocaleTimeString();
     },1000);
+    img.addEventListener('mouseover',()=>{
+        img.style.transform='scale(1.3) rotate('+360+'deg)';
+    })
+    img.addEventListener('mouseout',()=>{
+        img.style.transform='scale(1) rotate('+0+'deg)';
+    })
 </script>
 </html>
