add notepad file
待解析notepad

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo">groge</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#"><h3>记事本</h3></a></li>
-                    <li><h3>别点</h3>
+                    <li><a href="notepad.html"><h3>记事本</h3></a></li>
+                    <li><h3>无</h3>
                         <div class="log">
                             <ul>
                                 <li><a href="#">你</a></li>
@@ -129,11 +129,12 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="#"><h3>广告位</h3></a></li>
+                    <li><a href="heart.html"><h3 style="color:red">LOVE</h3></a></li>
                 </ul>
             </div>
         </nav>
         <div class="image">
+            <h2 style="margin-bottom:10px;text-align: center;color: rgba(255, 0, 0, 0.466);">peng</h2>
             <a href="#">
                 <img src="asset/fat_man.png" alt="">
             </a>
