adjust nav z-index

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             position:fixed;
             top: -200px;
             transition: all 0.5s;
+            z-index:1000;
         }
         .nav-wrapper{
             width: 100%;
