--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             position:fixed;
             top: -200px;
             transition: all 0.5s;
-            z-index:1000;
+            z-index: 1000;
         }
         .nav-wrapper{
             width: 100%;
@@ -91,6 +91,7 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
+            box-shadow: 1px 1px 30px #5fcde4;
             transition: all 1s;
         }
         .image h1{
@@ -165,24 +166,33 @@
     const img=document.querySelector('img');
     const nav=document.querySelector('nav');
     const time=document.querySelector('#current_time');
+    let degree=0;
+    let scroll_y=0;
     //向下滑nav出现在顶部，向上滑nav消失
     window.addEventListener('scroll',()=>{
-        if(window.scrollY>0){
+        if(window.scrollY-scroll_y>0){
             nav.style.top=0;
-            img.style.transform='rotate('+360+'deg)';
+            scroll_y=window.scrollY;
+            degree=360;
+            img.style.transform='rotate('+degree+'deg)';
         }else{
-            nav.style.top='-100px';
-            img.style.transform='rotate('+0+'deg)';
+            nav.style.top='-200px';
+            scroll_y=window.scrollY;
+            degree=0;
+            img.style.transform='rotate('+degree+'deg)';
         }
     })
     setInterval(() => {
         time.innerHTML=new Date().toLocaleTimeString();
+        console.log(degree)
     },1000);
     img.addEventListener('mouseover',()=>{
-        img.style.transform='scale(1.3) rotate('+360+'deg)';
+        degree+=360;
+        img.style.transform='scale(1.3) rotate('+degree+'deg)';
     })
     img.addEventListener('mouseout',()=>{
-        img.style.transform='scale(1) rotate('+0+'deg)';
+        degree-=360;
+        img.style.transform='scale(1) rotate('+degree+'deg)';
     })
 </script>
 </html>
