--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
                     <i>snake</i>
                 </a>
             </div>
+            <div class="Sudoku">
+                <a href="page/Sudoku.html">
+                    <i>snake</i>
+                </a>
+            </div>
         </div>
         
 
