--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
             <div class="Sudoku">
                 <a href="page/Sudoku.html">
-                    <i>snake</i>
+                    <i>Sudoku</i>
                 </a>
             </div>
         </div>
