--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </nav>
         <div class="image">
             <h2 style="margin-bottom:10px;text-align: center;color: rgba(255, 0, 0, 0.466);">peng</h2>
-            <a href="#">
+            <a href="blogs.html">
                 <img src="asset/fat_man.png" alt="">
             </a>
             <h1 id="current_time">
